fix gulp config

--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <title>Test</title>
+        <title>Gulp Demo</title>
         <link rel="stylesheet" href="assets/style.css">
     </head>
     <body>
         <img src="images/man.png" alt="">
-        <p>我是测试文件1</p>
-        <p><a href="#">这是一个链接</a></p>
+        <p>我是测试文件</p>
+        <p><a href="#">This is a test link</a></p>
 
         <h4 id="title"></h4>
-        我们来了，测试一下 <br>
+        我们来了，测试一下<br>
         小灰灰<br>
         看到内容没？<br>
 
         页面变了吗? <br>
-        随意变
+        随意变动了
 
 
         <script src="assets/app.js"></script>
-        <script>document.write('<script src="http://' + (location.host || API.localIp).split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+        <script>
+            // document.write('<script src="http://' + (location.host || API.localIp).split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+        </script>
     </body>
 </html>
